--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,12 @@ pm_to_blib
 blib/
 META.yml
 MYMETA.*
-META.json
 META.yml
 README
+/AnyEvent-SKKServ-*
+/.build
+/_build_params
+/Build
+!Build/
+!META.json
+!LICENSE
